--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <br>
 <div>
-    <a href="introduction.html" target="_blank">Go to Introduction</a>
+    <a href="little_prince.html" target="_blank">View Little Prince</a>
 </div>
 </body>
 </html>
