--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title style="text-align: center"> Charles Randall Bio </title>
-    <div style="text-align: left;width: 200px">Charles Randall<br> Assignment 1</div>
+    <div style="text-align: left;width: 200px">Charles Randall<br> Assignment 2</div>
 
 </head>
 <body>
@@ -19,8 +19,12 @@
 
 </div>
 <br>
+<br>
+<br>
 <div>
     <a href="little_prince.html" target="_blank">View Little Prince</a>
+    <br>
+    <a href="Introduction.html.html" target="_blank">Go to introduction</a>
 </div>
 </body>
 </html>
