--- a/Introduction.html
+++ b/Introduction.html
@@ -20,8 +20,13 @@
 <img style="display: inline-block;width: 300px" src="internship1.jpg">
     <img style="display: inline-block;width: 300px" src="hmi.jpg">
 </div>
+<br>
+<br>
+<br>
 <div>
     <a href="index.html" target="_blank">Go to Index</a>
+    <br>
+    <a href="little_prince.html" target="_blank">View Little Prince</a>
 </div>
 </body>
 </html>
